# Kinco-Servo-Driver

./: README.md
install/: local_setup.sh  setup.sh
install/1DOF_arm_controller/lib/1DOF_arm_controller/: application_node  gui_node  serial_node  test_node
install/1DOF_arm_controller/share/1DOF_arm_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm_interfaces/include/arm_interfaces/arm_interfaces/msg/: app_params.hpp  motor_cmd.h  sensor_data.h  sensor_data.hpp
install/arm_interfaces/include/arm_interfaces/arm_interfaces/msg/detail/: app_params__builder.hpp  app_params__functions.c  app_params__type_support.cpp  (+20 more)
install/arm_interfaces/include/arm_interfaces/arm_interfaces/srv/: sensor_feedback.h
install/arm_interfaces/share/ament_index/resource_index/package_run_dependencies/: arm_interfaces
install/arm_interfaces/share/arm_interfaces/: local_setup.sh  package.sh  package.xml
install/arm_interfaces/share/arm_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  rosidl_cmake-extras.cmake
install/arm_interfaces/share/arm_interfaces/launch/: kinco.launch.py
install/arm_interfaces/share/arm_interfaces/msg/: AppParams.idl  MotorCmd.idl  MotorCmd.msg  SensorData.msg
install/arm_interfaces/share/arm_interfaces/srv/: SensorFeedback.srv  SensorFeedback_Request.msg
log/: latest_build
src/1DOF_arm_controller/: setup.cfg  setup.py
src/1DOF_arm_controller/1DOF_arm_controller/: KincoServoDriver.py  data_plot.py
src/arm_interfaces/: CMakeLists.txt
src/arm_interfaces/msg/: AppParams.msg
(+11 files in other folders)
