<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>1DOF_arm_controller</name>
  <version>0.0.0</version>
  <description>TODO: controller Package for Kinco Servo FD124S motor</description>
  <maintainer email="kuldeep@todo.todo">kuldeep</maintainer>
  <license>TODO: Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>message_generation</depend>

  <!-- <build_depend>example_interfaces</build_depend>
  <exec_depend>example_interfaces</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
